--- a/index.html
+++ b/index.html
@@ -4,105 +4,199 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Care Mobility Support Services</title>
-  <meta name="description" content="Reliable, recurring transportation for dialysis, chemotherapy, and other essential medical appointments." />
+  <meta name="description" content="Reliable non-emergency medical transportation for recurring appointments like dialysis, chemotherapy, physical therapy, and more." />
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
-  <header class="hero">
-    <div class="container">
-      <h1>Care Mobility Support Services</h1>
-      <p class="subtitle">
-        Reliable transportation for recurring medical appointments.
-        The same driver. The same vehicle. Every time.
-      </p>
-      <a href="#contact" class="cta">Request a Ride</a>
+  <!-- Header -->
+  <header class="site-header">
+    <div class="container header-inner">
+      <div class="brand">
+        <span class="brand-mark">CM</span>
+        <div class="brand-text">
+          <strong>Care Mobility</strong>
+          <span>Support Services</span>
+        </div>
+      </div>
+
+      <nav class="nav">
+        <a href="#services">Services</a>
+        <a href="#bio">Our Story</a>
+        <a href="#contact" class="nav-cta">Request a Ride</a>
+      </nav>
     </div>
   </header>
 
-  <main>
-    <section class="section">
-      <div class="container">
-        <h2>Who We Help</h2>
-        <p>
-          Care Mobility is designed for individuals and families who need
-          dependable transportation for ongoing health care needs such as
-          dialysis, chemotherapy, physical therapy, and other recurring
-          medical appointments.
-        </p>
-        <p>
-          Rideshare services can be unpredictable. Different drivers, different
-          vehicles, and uncertain arrival times can create stress on days when
-          reliability matters most.
-        </p>
-      </div>
-    </section>
+  <!-- Hero -->
+  <section class="hero">
+    <div class="container hero-grid">
+      <div class="hero-copy">
+        <h1>Reliable transportation for recurring medical care.</h1>
 
-    <section class="section alt">
-      <div class="container">
-        <h2>Why Care Mobility</h2>
-        <ul class="features">
-          <li>Consistent, scheduled transportation</li>
-          <li>Same driver and vehicle whenever possible</li>
-          <li>On-time pickup and return</li>
-          <li>Clear communication with patients and families</li>
-          <li>Ideal for long-term and recurring appointments</li>
-        </ul>
-      </div>
-    </section>
-
-    <section class="section">
-      <div class="container">
-        <h2>Service Area</h2>
-        <p>
-          We currently provide service in the local area and focus on
-          short- to mid-distance medical appointments that require
-          reliability and care.
-        </p>
-      </div>
-    </section>
-
-    <section id="contact" class="section alt">
-      <div class="container">
-        <h2>Request Information</h2>
-        <p>
-          Use the form below to request availability or ask questions.
-          We’ll respond promptly.
+        <p class="lead">
+          Care Mobility specializes in <strong>non-emergency medical transportation</strong> where being on time matters.
+          Dialysis, chemotherapy, physical therapy, infusion treatments, follow-up visits, and more.
         </p>
 
-        <form name="care-mobility-contact" method="POST" data-netlify="true">
-          <input type="hidden" name="form-name" value="care-mobility-contact" />
+        <p class="video-note">
+          Watch the short video to understand why Care Mobility exists and how it’s different from rideshare services.
+        </p>
 
-          <label>
-            Name
-            <input type="text" name="name" required />
-          </label>
+        <div class="hero-actions">
+          <a href="#contact" class="btn primary">Request Availability</a>
+          <a href="#services" class="btn secondary">Learn More</a>
+        </div>
 
-          <label>
-            Email
-            <input type="email" name="email" required />
-          </label>
-
-          <label>
-            Phone
-            <input type="tel" name="phone" />
-          </label>
-
-          <label>
-            Message
-            <textarea name="message" rows="4" required></textarea>
-          </label>
-
-          <button type="submit">Submit</button>
-        </form>
+        <p class="note">
+          Not emergency transportation. If this is a medical emergency, please call 911.
+        </p>
       </div>
-    </section>
-  </main>
 
-  <footer>
+      <!-- Video -->
+      <div class="hero-media">
+        <div class="media-card video-card">
+          <video
+            controls
+            playsinline
+            preload="metadata"
+            poster="assets/video-poster.jpg"
+            aria-label="Care Mobility overview video"
+          >
+            <source src="assets/care-mobility-intro.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video>
+          <div class="media-caption">
+            Dependable, on-time transportation for recurring medical appointments.
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Services -->
+  <section id="services" class="section">
     <div class="container">
-      <p>
-        © <span id="year"></span> Care Mobility Support Services
+      <h2>Non-Emergency Medical Transportation, Done Right</h2>
+      <p class="muted">
+        Many seniors and patients rely on random rideshare drivers for critical medical appointments.
+        Different drivers, different cars, and uncertain timing can create unnecessary stress.
       </p>
+
+      <div class="cards">
+        <div class="card">
+          <h3>Recurring Appointments</h3>
+          <p>
+            Designed specifically for ongoing care like dialysis, chemotherapy, radiation therapy,
+            physical therapy, infusion visits, lab work, and post-operative follow-ups.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>Consistency & Commitment</h3>
+          <p>
+            The same driver whenever possible. Familiar routines.
+            A real sense of accountability for showing up on time.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>Clear Communication</h3>
+          <p>
+            Simple coordination with patients and families.
+            Confirmations, expectations, and respectful assistance.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Bio -->
+  <section id="bio" class="section alt">
+    <div class="container bio-grid">
+      <div class="bio-photo">
+        <img
+          src="assets/dan-photo.jpg"
+          alt="Photo of Daniel Shim"
+        />
+      </div>
+
+      <div class="bio-copy">
+        <h2>Why I Started Care Mobility</h2>
+        <p>
+          I started Care Mobility after noticing how many seniors and patients with recurring
+          health appointments were relying on random rideshare drivers.
+          New driver every time, unpredictable arrivals, and no real commitment.
+        </p>
+        <p>
+          For treatments like dialysis and chemotherapy, reliability is not optional.
+          Care Mobility is built around showing up on time, every time, for people who depend on it.
+        </p>
+
+        <div class="badges">
+          <span>Reliable scheduling</span>
+          <span>Recurring care focus</span>
+          <span>Patient-first mindset</span>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="section">
+    <div class="container">
+      <h2>Request Availability</h2>
+      <p class="muted">
+        Share the appointment type, days, and times. I’ll respond promptly.
+      </p>
+
+      <form
+        name="care-mobility-contact"
+        method="POST"
+        data-netlify="true"
+        class="contact-form"
+      >
+        <input type="hidden" name="form-name" value="care-mobility-contact" />
+
+        <label>
+          Name
+          <input type="text" name="name" required />
+        </label>
+
+        <label>
+          Email
+          <input type="email" name="email" required />
+        </label>
+
+        <label>
+          Phone
+          <input type="tel" name="phone" />
+        </label>
+
+        <label>
+          Appointment Type
+          <input type="text" name="appointment_type" placeholder="Dialysis, chemo, PT, imaging…" />
+        </label>
+
+        <label>
+          Message
+          <textarea name="message" rows="4" required></textarea>
+        </label>
+
+        <button type="submit" class="btn primary">Send Request</button>
+
+        <p class="fineprint">
+          Email alerts are sent to danielshim@gmail.com via Netlify Forms.
+        </p>
+      </form>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container footer-inner">
+      <p>© <span id="year"></span> Care Mobility Support Services</p>
+      <p class="muted">Non-Emergency Medical Transportation</p>
     </div>
   </footer>
 
