--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
   </section>
 
-  <!-- MIDDLE VALUE SECTION -->
+  <!-- SERVICES -->
   <section class="services">
     <div class="services-header">
       <h2>Recurring Medical Transportation, Done Right.</h2>
@@ -76,14 +76,16 @@
     </div>
   </section>
 
-  <!-- FOUNDER / BIO (MUCH BIGGER) -->
+  <!-- FOUNDER / BIO -->
   <section class="founder-section">
     <div class="founder-inner">
-      <img
-        src="assets/daniel.jpg"
-        alt="Daniel Shim"
-        class="founder-photo"
-      />
+      <div class="founder-photo-wrap">
+        <img
+          src="assets/daniel.jpg"
+          alt="Daniel Shim"
+          class="founder-photo"
+        />
+      </div>
 
       <div class="founder-content">
         <h2>Built Around Showing Up</h2>
@@ -106,7 +108,7 @@
     </div>
   </section>
 
-  <!-- CONTACT FORM -->
+  <!-- CONTACT -->
   <section class="contact">
     <div class="contact-inner">
       <h2>Request Transportation or Learn More</h2>
