--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     </div>
   </section>
 
-  <!-- SERVICES -->
+  <!-- SERVICES / MIDDLE SECTION -->
   <section class="services">
     <div class="services-header">
       <h2>Recurring Medical Transportation, Done Right.</h2>
       <p>
-        Many seniors and patients rely on random rideshare drivers for
-        critical medical appointments. Different drivers, different cars,
-        and uncertain timing can create unnecessary stress.
+        Many seniors and patients rely on inconsistent transportation
+        for critical medical appointments. Different drivers, uncertain
+        timing, and last-minute cancellations create unnecessary stress.
       </p>
     </div>
 
@@ -44,26 +44,24 @@
       <div class="service-card blue">
         <h3>Dialysis Visits</h3>
         <p>
-          Dialysis happens multiple times a week and cannot be missed.
-          We show up on time, every time, so transportation never puts
-          care at risk.
+          Dialysis happens multiple times per week and cannot be missed.
+          We provide consistent, on-time transportation you can rely on.
         </p>
       </div>
 
       <div class="service-card peach">
         <h3>Chemotherapy</h3>
         <p>
-          Chemotherapy days are physically and emotionally demanding.
-          Having a familiar, reliable driver removes one critical
-          source of stress.
+          Treatment days are physically and emotionally demanding.
+          Familiar drivers and predictable schedules reduce stress.
         </p>
       </div>
 
       <div class="service-card green">
         <h3>Physical & Mental Therapy</h3>
         <p>
-          Consistency is key to recovery. We make transportation the
-          least of your problems so patients can focus on healing.
+          Consistency is essential for recovery. Transportation should
+          support care — not disrupt it.
         </p>
       </div>
     </div>
@@ -76,7 +74,7 @@
     </div>
   </section>
 
-  <!-- FOUNDER -->
+  <!-- FOUNDER / BIO -->
   <section class="founder-section">
     <div class="founder-inner">
       <div class="founder-photo-wrap">
@@ -91,18 +89,18 @@
         <h2>Built Around Showing Up</h2>
         <p class="founder-lead">
           Care Mobility exists because too many seniors were missing or
-          stressing over critical medical appointments — not because care
-          wasn’t available, but because dependable transportation wasn’t.
+          stressing over essential medical appointments — not because
+          care wasn’t available, but because dependable transportation wasn’t.
         </p>
         <p>
-          I saw firsthand how inconsistent pickup times, unfamiliar drivers,
-          and last-minute cancellations created anxiety for patients and
-          families already dealing with serious health challenges.
+          I saw how unreliable pickup times, unfamiliar drivers, and
+          cancellations created anxiety for patients and families already
+          facing serious health challenges.
         </p>
         <p>
           Care Mobility was built to be different. Familiar drivers.
-          Consistent schedules. Accountability you can count on — week
-          after week, appointment after appointment.
+          Consistent schedules. Accountability you can count on —
+          week after week.
         </p>
       </div>
     </div>
@@ -115,13 +113,13 @@
       <!-- PHONE CTA -->
       <div class="phone-cta">
         <p>Prefer to speak with someone now?</p>
-        <a href="tel:16178216429">Call (617) 821-6429</a>
+        <a href="tel:16178216429">(617) 821-6429</a>
       </div>
 
       <h2>Request Transportation or Learn More</h2>
       <p>
         If you or a loved one needs reliable, recurring medical
-        transportation, reach out below and we’ll follow up personally.
+        transportation, submit the form below and we’ll follow up personally.
       </p>
 
       <!-- NETLIFY FORM -->
@@ -134,9 +132,7 @@
         <!-- REQUIRED NETLIFY FIELDS -->
         <input type="hidden" name="form-name" value="contact" />
         <input type="hidden" name="bot-field" />
-
-        <!-- Helps with email replies + auto-response -->
-        <input type="hidden" name="subject" value="New Care Mobility Inquiry" />
+        <input type="hidden" name="redirect" value="/thanks.html" />
 
         <input
           type="text"
@@ -168,12 +164,10 @@
         <button type="submit">Submit</button>
       </form>
 
-      <!-- HIPAA-SAFE DISCLAIMER -->
+      <!-- HIPAA DISCLAIMER -->
       <p class="hipaa-disclaimer">
-        Please do not include medical diagnoses, treatment details, or
-        other sensitive health information in this form. This form is
-        not intended for the transmission of protected health
-        information (PHI).
+        Please do not include medical diagnoses, treatment details,
+        or other protected health information (PHI) in this form.
       </p>
 
     </div>
